[gd_scene load_steps=6 format=3 uid="uid://5jla8f64s8f"]

[ext_resource type="Script" uid="uid://b56rv0tql5rd7" path="res://ui/hud.gd" id="1_1v5rv"]
[ext_resource type="Texture2D" uid="uid://cd7nrnoa5d2g4" path="res://assets/Ui/Receptacle/LifeBarMiniUnder.png" id="1_en2x2"]
[ext_resource type="Texture2D" uid="uid://dlapvfa2ithyt" path="res://assets/Ui/Receptacle/LifeBarMiniProgress.png" id="2_1v5rv"]
[ext_resource type="FontFile" uid="uid://kwrkbjiihpj5" path="res://assets/Ui/Font/NormalFont.ttf" id="4_srpbi"]
[ext_resource type="Texture2D" uid="uid://d3ohffxbqnpdn" path="res://assets/Ui/Receptacle/Receptacle Sphere/Select.png" id="5_spcu4"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_1v5rv")

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UIContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UIContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HealthBar" type="TextureProgressBar" parent="UIContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("1_en2x2")
texture_progress = ExtResource("2_1v5rv")

[node name="DashChargesContainer" type="HBoxContainer" parent="UIContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Spacer" type="Control" parent="UIContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HotbarContainer" type="HBoxContainer" parent="UIContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SlotButton0" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton1" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton2" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton3" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton4" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton5" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton6" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton7" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SlotButton8" type="Button" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer/SlotButton8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_srpbi")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
vertical_alignment = 2

[node name="SelectionIndicator" type="TextureRect" parent="UIContainer/MarginContainer/VBoxContainer/HotbarContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_spcu4")
